src/objects/energyLinkBucket__c.object
<CustomObject>
    <fields>
        <fullName>Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkId__c</fullName>
        <description>For reprocessing, insert original check Id.  Without the ID, the reprocess will fail.</description>
        <label>Check Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>checkURL__c</fullName>
        <externalId>true</externalId>
        <label>Check URL</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>reprocess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true for the system to automatically reprocess the related check during the next scheduled job.</description>
        <label>Reprocess</label>
        <type>Checkbox</type>
    </fields>
    <label>Energy Link Bucket</label>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Energy Link Check</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Link Bucket</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>